test/bad/fieldpolicy/InvalidPolicyModifier.para
public class InvalidPolicyModifier {
    public static int y;
    public static ?y int x;
}